# aliceui

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
example/: CMakeLists.txt  example_common.props
example/OLD/HelloWorld/: main.cpp
example/OpenGLExample/OpenGLExample/: main.cpp
example/cocoa_app/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  MainMenu.xib  plist.in
example/glfw_sample_app/: CMakeLists.txt  CubeModel.cpp  CubeModel.h  OpenGLCommon.h  QuadModel.cpp  QuadModel.h  SampleState.cpp  SampleState.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  main.cpp
example/glfw_sample_metal_app/: CMakeLists.txt  main.mm  plist.in
natvis/: AliceUI.natvis
src/: AliceUI.sln  CMakeLists.txt
src/AliceUI/: AUI1DShapeDef.h  AUI3DDrawableWidget.cpp  AUI3DDrawableWidget.h  AUIAPIDef.h  AUIAbsoluteLayout.cpp  AUIAccelDecelInterpolator.cpp  AUIAccelDecelInterpolator.h  AUIAnimationListDrawable.cpp  AUIAnimationListDrawable.h  AUIApplication.cpp  AUIApplication.h  AUIArrayAdapter.h  AUIAsyncTask.h  AUIButtonWidget.cpp  AUIButtonWidget.h  AUICalendar.cpp  AUICalendar.h  AUICalendarBodyWidget.cpp  AUICalendarBodyWidget.h  AUICalendarChangeButtonWidget.cpp  AUICalendarChangeButtonWidget.h  AUICalendarCommonDef.h  AUICalendarElementWidget.cpp  AUICalendarElementWidget.h  AUICalendarFoldButton.cpp  AUICalendarFoldButton.h  AUICalendarFrameWidget.cpp  AUICalendarFrameWidget.h  AUICalendarImpl.cpp  AUICalendarImpl.h  AUICalendarQuickButtonWidget.cpp  AUICalendarQuickButtonWidget.h  AUICalendarRowWidget.cpp  AUICalendarRowWidget.h  AUICalendarTableWidget.cpp  AUICalendarTableWidget.h  AUICanvasHelper.cpp  AUICheckboxWidget.cpp  AUICheckboxWidget.h  AUIClipboard.cpp  (+199 more)
src/AliceUI/darwin/: AUIDarwinAppImpl.h  AUIDarwinAppImpl.mm  AUIDarwinHandle.h  AUIDarwinHandle.mm  AUIDarwinWindowHandle.h  AUIDarwinWindowHandle.mm
src/AliceUI/res/: AliceUI.rc2
src/AliceUI/win32/: AUIClipboard_win32.cpp  AUIMFCCommon.h  AUIWin32Handle.cpp  AUIWin32Handle.h  AUIWnd.cpp  AUIWnd.h  dllmain.cpp
src/HelloWorld/: HelloWorld.vcxproj  main.cpp
src/MIT_alice/: AUICalendar.h  AUICalendarElementWidget.cpp  AUICalendarElementWidget.h  AUICalendarFoldButton.cpp  AUICalendarFrameWidget.cpp  AUIEditWidget.cpp  AUII18NPrivateDef.h  AUIICUStringUtility.cpp  AUIICUStringUtility.h  AUILocale.cpp  AUISimpleDateFormat.cpp  AUITimeZone.cpp  MIT_alice.vcxproj  MIT_alice.vcxproj.filters
